@@ -14,3 +14,5 @@ TODO/BUGS before releasing 2.0.0pre1:
 * color paste is crashing
 
 * userlist popup menu doesn't stay there on button-release
+
+* filenames send via DCC arn't converted to current locale first
