@@ -53,6 +53,11 @@ struct _xchat_plugin
 		  int timeout,
 		  int (*callback) (void *user_data),
 		  void *userdata);
+	xchat_hook *(*hook_socket) (xchat_plugin *ph,
+		   int fd,
+		   int flags,
+		   int (*callback) (int fd, int flags, void *user_data),
+		   void *userdata);
 	void *(*unhook) (xchat_plugin *ph,
 	      xchat_hook *hook);
 	void (*print) (xchat_plugin *ph,
@@ -131,6 +136,12 @@ xchat_hook_timer (xchat_plugin *ph,
 		  int timeout,
 		  int (*callback) (void *user_data),
 		  void *userdata);
+xchat_hook *
+xchat_hook_socket (xchat_plugin *ph,
+		   int fd,
+		   int flags,
+		   int (*callback) (int fd, int flags, void *user_data),
+		   void *userdata);
 
 void *
 xchat_unhook (xchat_plugin *ph,
